# cryptocard_test

./: README.md  install.sh  mysql-install.sh  register.sh
autoweb_test/: app_identity_audit.py  application_identity.py  bind_email.py  browserengine.py  change_pin.py  codelogin.py  email_generate.py  identity.py  logger.py  mysql.py  old_mysql.py  phonegenerate.py  randomstring.py  register.py  test.py  test_application_identity_aid.py  test_application_identity_audit.py  test_bind_email.py  test_change_pin.py  test_identity_tid.py  test_register_apply.py  test_ukey_login.py  ukey_login.py  ukey_manager.py
dms_sdf_test/: CMakeLists.txt  Makefile  dms_sdf_test
dms_sdf_test/src/: debug.c  debug.h  dms_sdf_test.c
dms_sdf_test/src/alg/: sm2.c  sm2.h  sm3.c  sm4.h
mmj_ukey_test/: mmj.py  mmj_pack.py  thread_test.py  ukey.py  ukey_pack.py
pcie_auto_test/: Makefile  TestMax-Listing.xml  TestMax-Results.xml  cycle_run.sh  log.c  log.h  pciLog.c  pciLog.h  pcieTest  pcieTest.c  pcitesterrno.h  sm2.c  sm2.h  sm3.c  sm4.c  test_pcie_case.c  test_pcie_case.c.bak
pcie_func_test/: oldpcie.py  pcie-ECC.py  pcie-RSA-ECC.py
pcie_performance_test/: Makefile  Makefile.bak  pcieXN-ECC.c  pcieXN-RSA-ECC.c  pcieXN.c
random_test/: Makefile  randomTest.c  randomTest.h  test.c
shell_scripts/: configureDev.sh  java-install.sh  nginx-install.sh
sws_test/: FunctionTest.c  TestSDS.c  TestSDS.h  Util.c  makefile  swsds.h
